Fixed issue with grid-gap
The bio and blog post now take up the full 100% width of the viewport on smaller screens.

--- a/src/assets/styles/base/_grid.scss
+++ b/src/assets/styles/base/_grid.scss
@@ -139,6 +139,7 @@
   }
 
   &--blog {
+    grid-gap: 0;
     grid-template-columns: 1fr;
 
     @media screen and (min-width: map-get($bp, 'md')) {
